Changing 1.4 to 1.2 for tile line height, fixing vertical align javascript.

--- a/gsusa/content/src/main/theme/custom/scss/components/_article-tile.scss
+++ b/gsusa/content/src/main/theme/custom/scss/components/_article-tile.scss
@@ -1,12 +1,14 @@
 $font-size: 14px;
-$line-height: 1.4;
+$line-height: 1.2;
 $lines-to-show: 3;
 .article-tile {
   section {
     position: relative;
     img {
-      height: 100%;
       width: 100%;
+      &:not(.last) {
+        height: 100%;
+      }
     }
     .text-content {
       z-index: 15;
